--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,27 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #19323c;
+}
+
+img {
+  width: 100%;
+}
+
+.container {
+  height: 100vh;
+  width: 100vw;
+}
+
+.car-container {
+  width: 20%;
+}
+
+.flex {
+  display: flex;
+}
+
+.center-both {
+  align-items: center;
+  justify-content: center;
 }
